--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "spotify-web-api-node": "^5.0.2"
   }
 }
