--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^16.4.5",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-lottie": "^1.2.4",
     "spotify-web-api-node": "^5.0.2"
   }
 }
