--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "prop-types": "^15.8.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-lottie": "^1.2.4",
     "spotify-web-api-node": "^5.0.2"
