--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "colorthief": "^2.4.0",
     "dotenv": "^16.4.5",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
