--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react-router-dom": "^6.23.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
@@ -20,6 +19,9 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-lottie": "^1.2.4",
+    "react-router-dom": "^6.23.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "spotify-web-api-node": "^5.0.2"
   }
 }
